<resources>
    <string name="app_name">QuizUp</string>
    <string name="tq">Test Quiz</string>
    <string name="email">Email Id</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="facebook_app_id">875069409346157</string>
    <string name="fb_login_protocol_scheme">fb875069409346157</string>
    <string name="gm">Sign in with Google +</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="ld">loding</string>
    <string name="imgProfilePic">ImageView</string>
    <string name="_20dp">20dp</string>
    <string name="todo">TODO</string>
    <string name="em">Email Display Here</string>
    <string name="tv3">Welcome</string>
    <string name="name_display_here">Name Display Here</string>
    <string name="email_display_here">Email Display Here</string>
    <string name="btnl2">Sign Out</string>
    <string name="textView4">Log in with Facebook</string>
    <string name="textView5">Welcome</string>
    <string name="btn3">Take test now</string>
    <string name="button1">Subject-1</string>
    <string name="button2">Subject-2</string>
    <string name="button3">Subject-3</string>
    <string name="button4">Subject-4</string>
    <string name="button5">Subject-5</string>
    <string name="button6">Subject-6</string>
    <string name="button7">Subject-7</string>
    <string name="button8">Subject-8</string>
    <string name="button9">Subject-9</string>
    <string name="button10">Subject-10</string>
    <string name="newhere">New here? Sign Up</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email1">Email Address</string>
    <string name="pass">Password</string>
    <string name="conpwd">Confirm Password</string>
    <string name="reg">Register</string>
    <string name="login1">Login</string>
    <string name="regform">REGISTRATION FORM</string>
    <string name="btn1signout">Sign Out</string>
    <string name="signinpage">Login</string>
</resources>
