<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Subject button-->
        <Button
            android:id="@+id/button1"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:padding="5dp"
            android:text="@string/button1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="74dp"
            android:padding="5dp"
            android:text="@string/button2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="162dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="122dp"
            android:padding="5dp"
            android:text="@string/button3"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="165dp"
            android:padding="5dp"
            android:text="@string/button4"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="210dp"
            android:padding="5dp"
            android:text="@string/button5"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="212dp"
            android:padding="5dp"
            android:text="@string/button6"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="162dp"
            android:padding="5dp"
            android:text="@string/button7"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="117dp"
            android:padding="5dp"
            android:text="@string/button8"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="66dp"
            android:padding="5dp"
            android:text="@string/button9"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button10"
            android:layout_width="162dp"
            android:layout_height="37dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:padding="5dp"
            android:text="@string/button10"
            android:textSize="18sp" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>